better MessageParser, named modules for debugging